2010-04-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Prepend type to warning, error, and fatal messages.
	For the first part of messages of types `error' or `fatal',
	prepend `error: ' to the message.  Prepend `warning: ' to
	warning messages, whatever the setting of -Werror.
	* lib/Automake/Channels.pm (partial): Move up definition.
	(_format_message): Emit `header' and `footer' strings only with
	the first resp. last part of a set of partial messages.
	* lib/Automake/ChannelDefs.pm: Add missing '1;' statement at the
	end of the module.
	(Automake::ChannelDefs): Setup warning channels with header
	`warning: ', error and fatal messages with header `error: '.
	* tests/condinc2.test, tests/ltinstloc.test: Adjust expected
	error messages.
	* tests/comment5.test: Likewise.  Also, include stack notes
	should not start with `error:'.
	* tests/location.test: Likewise.  Also, try both -Werror and
	-Wno-error.
	* NEWS: Update.
	Report by Bruno Haible.

	Fix capitalization of error messages, reword one message.
	* lib/Automake/Variable.pm (define): Do not capitalize the first
	word in the error message.
	* automake.in (require_file_internal): Likewise.  Also, reword
	and line-wrap for better readability.
	* tests/distcom7.test, tests/pluseq5.test, tests/pluseq9.test:
	Adjust tests.

	Fix connected warnings about obsolete exeext override.
	* lib/Automake/Rule.pm (define): Merge two warnings that belong
	together, by setting the 'partial' flag for the first one.

	Fix per-Makefile.am setting of -Werror.
	Before this patch, 'AUTOMAKE_OPTIONS = -Werror' in one
	Makefile.am would carry over to other Makefile.am files
	treated afterwards by the same thread, causing inconsistent
	and unstable exit status values.
	* lib/Automake/Channels.pm (dup_channel_setup)
	(drop_channel_setup): Save and restore the setting of
	$warnings_are_errors.
	* tests/werror3.test: New test.
	* tests/Makefile.am: Adjust.
	* NEWS: Update.

2010-04-11  Stefano Lattarini  <stefano.lattarini@gmail.com>
