@@ -435,7 +435,7 @@ sub scan_configure_dep ($)
 	  # Make this just a warning, because we do not know whether
 	  # the macro is actually used (it could be called conditionally).
 	  msg ('unsupported', "$file:$line",
-	       "warning: macro `$2' not found in library");
+	       "macro `$2' not found in library");
 	}
     }
 
@@ -507,7 +507,7 @@ sub scan_file ($$$)
 	  if ($number !~ /$serial_number_rx/go)
 	    {
 	      msg ('syntax', "$file:$.",
-		   "warning: ill-formed serial number `$number', "
+		   "ill-formed serial number `$number', "
 		   . "expecting a version string with only digits and dots");
 	    }
 	  elsif ($defun_seen)
@@ -559,7 +559,7 @@ sub scan_file ($$$)
 	  $defun_seen = 1;
 	  if (! defined $1)
 	    {
-	      msg ('syntax', "$file:$.", "warning: underquoted definition of $2"
+	      msg ('syntax', "$file:$.", "underquoted definition of $2"
 		   . "\n  run info '(automake)Extending aclocal'\n"
 		   . "  or see http://sources.redhat.com/automake/"
 		   . "automake.html#Extending-aclocal")
