@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2002  Free Software Foundation, Inc.
+# Copyright (C) 2002, 2010  Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -30,7 +30,7 @@ L05 = "$(bad boy)"
 L06 = $(this:is= ok)
 L07 = ${three errors}${on this} $(long line)
 L08$(o u c h): $(wildcard *.c)
-	${another error}
+	${another Error}
 	echo $${ok-this is}
 L11: $(thisis) $(ok)
 	${here}
@@ -69,7 +69,7 @@ grep 'on this' stderr
 grep 'long line' stderr
 grep 'o u c h' stderr
 grep 'wildcard' stderr
-grep 'another error' stderr
+grep 'another Error' stderr
 grep 'thisis' stderr && Exit 1
 grep 'here' stderr && Exit 1
 
