@@ -1,5 +1,13 @@
 2010-04-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	Ensure we don't print 'warning:' or 'error:' twice.
+	* Makefile.am (sc_ensure_testsuite_has_run): New helper rule.
+	(sc_tests_logs_duplicate_prefixes): New rule, to check for
+	wrong-looking warning and error messages in the test suite logs.
+	* aclocal.in (scan_configure_dep, scan_file): Remove duplicate
+	`warning: ' prefix.
+	* tests/vars3.test: Rename variable to avoid false positive.
+
 	Prepend type to warning, error, and fatal messages.
 	For the first part of messages of types `error' or `fatal',
 	prepend `error: ' to the message.  Prepend `warning: ' to
